--- a/templates/css/style_form.css
+++ b/templates/css/style_form.css
@@ -107,8 +107,9 @@
 }
 .mensajevalidacion{
   
-  --webkit-color: #036;
-  --ms-color: #036;
-  --moz-color: #036;
+  -webkit-color: red;
+  -ms-color: red;
+  -moz-color: red;
+  color: red;
   font-size: 9px;
 }
