--- a/templates/css/jquery.dataTables.css
+++ b/templates/css/jquery.dataTables.css
@@ -21,7 +21,7 @@ table.dataTable tfoot th {
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
-  border-bottom: 1px solid #FFF;
+  border-bottom: 1px solid #444444;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -30,7 +30,7 @@ table.dataTable thead td:active {
 table.dataTable tfoot th,
 table.dataTable tfoot td {
   padding: 10px 18px 6px 18px;
-  border-top: 1px solid #FFF;
+  border-top: 1px solid #444444;
 }
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc,
@@ -47,7 +47,7 @@ table.dataTable thead .sorting_desc_disabled {
   background-position: center right;
 }
 table.dataTable thead .sorting {
-  background-image: url('../templates/img/sort2_asc.png') ;
+  background-image: url('../templates/img/images/sort2_asc.png') ;
 }
 table.dataTable thead .sorting_asc {
   background-image: url('../img/images/sort2_asc.png');
@@ -62,17 +62,17 @@ table.dataTable thead .sorting_desc_disabled {
   background-image: url("img/images/sort2_desc.png");
 }
 table.dataTable tbody tr {
-  background-color: #FFF;
+  background-color: #444444;
 }
 table.dataTable tbody tr.selected {
-  background-color: #FFF;
+  background-color: #444444;
 }
 table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 6px 8px;
 }
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-  border-top: 1px solid #FFF;
+  border-top: 1px solid #444444;
 }
 table.dataTable.row-border tbody tr:first-child th,
 table.dataTable.row-border tbody tr:first-child td, table.dataTable.display tbody tr:first-child th,
@@ -80,12 +80,12 @@ table.dataTable.display tbody tr:first-child td {
   border-top: none;
 }
 table.dataTable.cell-border tbody th, table.dataTable.cell-border tbody td {
-  border-top: 1px solid  #FFF;
-  border-right: 1px solid #FFF;
+  border-top: 1px solid  #444444;
+  border-right: 1px solid #444444;
 }
 table.dataTable.cell-border tbody tr th:first-child,
 table.dataTable.cell-border tbody tr td:first-child {
-  border-left: 1px solid #FFF;
+  border-left: 1px solid #444444;
 }
 table.dataTable.cell-border tbody tr:first-child th,
 table.dataTable.cell-border tbody tr:first-child td {
@@ -116,7 +116,7 @@ table.dataTable.order-column tbody tr > .sorting_2,
 table.dataTable.order-column tbody tr > .sorting_3, table.dataTable.display tbody tr > .sorting_1,
 table.dataTable.display tbody tr > .sorting_2,
 table.dataTable.display tbody tr > .sorting_3 {
-  background-color: #FFF;
+  background-color: #444444;
 }
 table.dataTable.order-column tbody tr.selected > .sorting_1,
 table.dataTable.order-column tbody tr.selected > .sorting_2,
@@ -204,7 +204,7 @@ table.dataTable.order-column.hover tbody tr.even:hover.selected > .sorting_3 {
   background-color: #a4b2cb;
 }
 table.dataTable.no-footer {
-  border-bottom: 1px solid #FFF;
+  border-bottom: 1px solid #444444;
 }
 table.dataTable.nowrap th, table.dataTable.nowrap td {
   white-space: nowrap;
@@ -345,9 +345,9 @@ table.dataTable td {
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
   font-family:Verdana, Geneva, sans-serif;
-  color: #FFF !important;
-  border: 1px solid #FFF;
-  background-color: #FFF;
+  color: #444444 !important;
+  border: 1px solid #444444;
+  background-color: #444444;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(96%, gainsboro));
   /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, white 0%, gainsboro 100%);
@@ -363,7 +363,7 @@ table.dataTable td {
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
   cursor: default;
-  color: #FFF !important;
+  color: #444444 !important;
   border: 1px solid transparent;
   background: transparent;
   box-shadow: none;
