--- a/templates/css/jquery.dataTables.css
+++ b/templates/css/jquery.dataTables.css
@@ -80,12 +80,12 @@ table.dataTable.display tbody tr:first-child td {
   border-top: none;
 }
 table.dataTable.cell-border tbody th, table.dataTable.cell-border tbody td {
-  border-top: 1px solid  #444444;
-  border-right: 1px solid #444444;
+  border-top: 1px solid  #FFF;
+  border-right: 1px solid #FFF;
 }
 table.dataTable.cell-border tbody tr th:first-child,
 table.dataTable.cell-border tbody tr td:first-child {
-  border-left: 1px solid #444444;
+  border-left: 1px solid #FFF;
 }
 table.dataTable.cell-border tbody tr:first-child th,
 table.dataTable.cell-border tbody tr:first-child td {
